[tool.poetry]
name = "redbot"
version = "0.1.0"
description = ""
authors = ["Beomus <trunghau60@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"